--- a/ReadME
+++ b/ReadME
@@ -80,3 +80,8 @@ MySQL VERSION INFORMATION
 Oracle's MySQL Workbench 8.0
 Version 8.0.27 Build 1228725 CE
 LAST UPDATED -> July 2021
+
+This is a release of MySQL Connector/J, a JDBC Type 4 driver for MySQL that
+also supports the new X DevAPI.
+
+mysql-connector-java-8.0.25.jar
